# datateam

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conda_requirements.txt  environment.yml  pip_requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: build.yml  codeql.yml  etchosts.txt
config/: .gitignore  datateam-vhost-ci.conf  datateam-vhost.conf  datateam.inc  drainagedata-vhost.conf
dataprocessing/: TD_Tile_Flow_missing_flow_data.R
docs/: meetings.md
htdocs/: .htaccess  contacts.php  cscap_dl.py  dcs.php  index.php  oauth2.js
htdocs/admin/: .htaccess  calc.py  cscap_dl.phtml  dataprogress.py  dlreport.phtml  edit.py  index.phtml  siteprogress.py  varprogress.py
htdocs/auth/: index.phtml
htdocs/cscap/: .htaccess  calc.py  dataprogress.py  dl.py  edit.py  index.phtml  mantable.py  plot_decagon.phtml  plot_decagon.py  plot_tileflow.phtml  plot_tileflow.py  plot_waterquality.phtml  plot_waterquality.py  plot_watertable.phtml  plot_watertable.py  usage.phtml  varprogress.py  yearly_avg_wx.py
htdocs/css/: bootstrap-override.css
htdocs/http_errors/: error404.php
htdocs/isbi/: index.phtml
htdocs/js/: hceditor.js  putil.js
htdocs/nn/: index.phtml
htdocs/td/: .htaccess  common.py  data.phtml  edit.py  index.phtml  plot_agronomic.phtml  plot_agronomic.py  plot_decagon.phtml  plot_decagon.py  plot_nitrateload.phtml  plot_nitrateload.py  plot_nitrateloss.phtml  plot_nitrateloss.py  plot_tileflow.phtml  plot_tileflow.py  plot_watertable.phtml  plot_watertable.py  usage.phtml
include/: forms.php  hceditor.php  myview.php  require_auth.php
include/templates/: footer.phtml  header.phtml  navbar.phtml
scripts/: RUN_6AM.sh  crontab.txt
scripts/auth/: drive2webaccess.py  drivefolder_readonly.py
scripts/cscap/: README.md  add_agronomic_column.py  add_plotid_cols.py  add_soilnitrate_column.py  check_2012_on.py  check_agronomic_header.py  check_agvars_vs_rotation.py  check_ghg_plotids.py  (+59 more)
tests/: test_all_application.py
(+115 files in other folders)
